src/log/build_2025-06-06_01-34-01/ros2_task_planner/stderr.log
  File "/home/projects/ros2_ws/spring-2025-final-project-team-4/src/install/ros2_task_planner/lib/python3.8/site-packages/ros2_task_planner/task_planner_node.py", line 84
    if (math.sqrt(x*x+y*y+z*z)>(L1+L2):
                                      ^
SyntaxError: invalid syntax

